src/sass/styles.sass
@import ../bower_components/bourbon/dist/bourbon
@import ../bower_components/neat/app/assets/stylesheets/neat

$brand-color: #4CBA64
$font-thin: 'HelveticaNeue-Thin', 'Helvetica Neue Light', 'Helvetica Neue', 'Segoe UI', Helvetica, Arial, 'Lucida Grande', sans-serif
$font-normal: 'Helvetica Neue', 'Segoe UI', Helvetica, Arial, 'Lucida Grande', sans-serif
$mobile: new-breakpoint(max-width 779px)
$desktop: new-breakpoint(min-width 780px)
$mobile2: new-breakpoint(max-width 630px)
$mobile3: new-breakpoint(max-width 979px)
$bpflex: new-breakpoint(min-width 724px max-width 1043px)

*
  -webkit-box-sizing: border-box
  -moz-box-sizing: border-box
  box-sizing: border-box

html
  font-family: $font-normal
  font-weight: 300

ul
  margin: 0
  padding: 0
  list-style: none

a
  color: white
  text-decoration: none

a.link
  @include transition(border 200ms)
  border-bottom: 1px solid transparent
  color: $brand-color

  &:hover, &:focus
    border-color: initial

a.button
  display: inline-block
  border-radius: 3px
  margin: 20px 0 30px
  padding: 16px 24px 15px
  text-transform: uppercase

  &.no-uppercase
    text-transform: none

  &.bordered
    @include transition(background 200ms)
    border: 1px solid $brand-color
    color: $brand-color

    &:hover, &:focus
      background: rgba(0, 132, 255, 0.03)

  &.filled
    @include transition(background-color 200ms)
    background-color: $brand-color
    color: white

    &:hover, &:focus
      background-color: tint($brand-color, 10%)

section
  text-align: center
  padding-top: 100px
  padding-bottom: 90px

  &.inverted
    background: $brand-color
    color: white

    a.button.bordered
      border: 1px solid white
      color: white

      &:hover, &:focus
        background: rgba(255, 255, 255, 0.1)

    a.link
      color: white
      border-color: white

  &:not(.inverted) a.link
    color: $brand-color

  img.wide
    width: 80%

  .title
    margin: 0 0 50px
    line-height: 44px
    font-family: $font-thin
    font-weight: 100
    font-size: 38px

.container
  @include outer-container
  padding: 0 $gutter

section#header
  padding-bottom: 70px

  .logo img
    height: 100px

  .title
    font-size: 42px
    margin-top: 80px
    margin-bottom: 40px

  .subtitle
    font-size: 17px
    font-weight: 300
    color: rgba(0, 0, 0, 0.7)
    margin: 0

  .button
    margin-top: 50px
    margin-bottom: 12px

  .notice
    color: rgba(0, 0, 0, 0.6)
    display: block
    font-size: 12px

section#platforms
  padding-bottom: 70px

  @include media($desktop)
    .images
      .ss
        img
          position: relative

        &.left
          @include span-columns(4)
          img
            width: 100%
            z-index: 20
            top: 40px
            right: -30%

        &.center
          @include span-columns(4)
          img
            width: 140%
            z-index: 30
            left: -20%

        &.right
          @include span-columns(4)
          img
            width: 100%
            z-index: 10
            top: 40px
            left: -30%

  @include media($mobile)
    .images
      margin-bottom: 30px
      padding: 0 30px

      .ss
        img
          width: 100%

        &.left
          img
            padding-left: 32px

        &.center
          margin-top: -50%
          img
            width: 108%
            margin-left: -3%
            padding-right: 30px
            padding-left: 5px

        &.right
          margin-top: -50%
          img
            padding-right: 40px

section#whatsapp-features
  @include media($mobile)
    li, .tile
      display: inline-block

  li
    span
      border-radius: 3px
      margin-top: 20px
      margin-bottom: 20px

    @include media($desktop)
      @include span-columns(4)

    .description
      margin-top: 0
      font-size: 18px
      color: #333

  .button
    margin-bottom: 0
    margin-top: 0

  p.small.notice
    display: block
    font-size: 10px
    margin-top: 40px
    color: transparentize(black, 0.5)

    a
      color: transparentize($brand-color, 0.3)
      border-color: transparentize($brand-color, 0.3)

section#features
  .title
    margin-bottom: 70px

  ul
    margin-top: 60px

  .desktop, .mobile
    margin-top: 20px
    padding-bottom: 20px

  .desktop
    li
      @include media($desktop)
        @include span-columns(4)
    @include media($mobile)
      display: none

    .feature
      padding: 20px 10px

  .mobile
    @include media($desktop)
      display: none

    li
      @include media($mobile)
        @include span-columns(6)

    .feature
      padding: 20px

  li .feature
    background: hsla(133,44%,47%,1)
    border-radius: 5px
    max-width: 180px
    display: block
    margin: auto

    svg
      width: 50px
      height: 50px
      display: block
      margin: auto

    span
      display: block
      padding-top: 20px

  p.small.notice
    display: block
    font-size: 10px
    margin-top: 20px
    margin-bottom: -10px
    color: transparentize(white, 0.5)

    a
      color: transparentize(white, 0.4)
      border-color: transparentize(white, 0.4)

section#download
  svg
    height: 20px
    margin-right: 5px
    position: relative
    bottom: -2px

  .osx svg
    bottom: -1px

  ul.container
    max-width: 440px
  li
    @include span-columns(6)
    @include media($mobile2)
      @include span-columns(12)
    padding: 0 5px 20px

  a
    width: 100%
    margin: 0
    padding-left: 0
    padding-right: 0

  .button
    font-size: 20px

section#featured
  li
    @include media($desktop)
      @include span-columns(4)

  li + li
    @include media($mobile)
      margin-top: 30px

  svg
    height: 42px

  p.appear-here
    display: block
    padding-top: 70px
    margin-bottom: -10px

    @include media($mobile)
      padding-top: 40px

section#faq
  .expander
    max-width: 600px
    margin: auto

    .expander-trigger
      @include user-select(none)
      border-bottom: 1px solid #EEE
      cursor: pointer
      display: block
      margin-bottom: 10px
      color: $brand-color
      text-align: left
      padding-bottom: 6px

      &:before
        font-size: 0.7em
        content: "\25BC"
        margin-right: 0.5em

    .expander-content
      margin-top: 0
      line-height: 1.5em
      text-align: left

    .expander-hidden
      &:before
        font-size: 0.7em
        content: "\25BA"

    .expander-hidden + .expander-content
      display: none

  .expander + .expander
    .expander-trigger
      padding-top: 15px

section#testimonials
  .reviews
    @include display(flex)
    @include flex-wrap(wrap)
    margin-bottom: 20px
    margin: 1em
    overflow: auto
    padding: 0

    .review
      @include flex-basis(20em)
      @include flex-grow(1)
      quotes: "“" "”" "‘" "’"
      min-height: 210px
      @include media($mobile)
        min-height: 180px
      @include media($bpflex)
        min-height: 220px
        &:last-child
          min-height: 150px

    .content
      @include transition(opacity 0.25s)
      line-height: 1.3
      margin-top: 30px
      margin-bottom: 0
      font-style: italic
      padding: 0 20px
      opacity: 1

      &:before
        content: open-quote
      &:after
        content: close-quote

    .author
      @include transition(opacity 0.25s)
      margin-bottom: 20px
      font-weight: bold
      font-style: italic
      padding-left: 30px
      float: left
      opacity: 1

      &:before
        content: "~ "

  a.button.bordered.typeform-share
    margin-bottom: 5px

section#contribute
  .lc, .rc
    @include span-columns(4)
    @include media($mobile2)
      @include span-columns(12)

  .lc
    @include media($desktop)
      @include shift(2)
    @include media($mobile)
      @include shift(2)
    @include media($mobile2)
      @include shift(0)

  .rc
    @include media($mobile2)
      li:first-child
        margin-top: 30px

  li
    a
      margin-top: 10px
      margin-bottom: 20px
      min-width: 180px
      @include media($mobile2)
        margin: 0

  li + li
    a
      @include media($mobile2)
        margin-top: 20px

section#contact
  input
    outline: none

  .email, .submit
    display: inline-block
    padding: 3px 15px
    height: 50px
    border: none

    @include media($mobile)
      width: 100%

  .email
    color: #333

    @include media($mobile)
      border-top-left-radius: 2px
      border-top-right-radius: 2px

    @include media($desktop)
      width: 50%
      border-top-left-radius: 2px
      border-bottom-left-radius: 2px

  .submit
    color: $brand-color
    background: white

    @include media($mobile)
      margin-top: 1px
      border-bottom-left-radius: 2px
      border-bottom-right-radius: 2px

    @include media($desktop)
      margin-left: 1px
      border-top-right-radius: 2px
      border-bottom-right-radius: 2px

section#share
  overflow-x: hidden

  li.widget
    margin-bottom: 30px

    iframe:not(:first-child)
      margin-left: 15px

    iframe
      border: none

    &.row1
      min-height: 224px

    &.row2
      height: 28px

    &.row3
      height: 20px

    .fb-send
      position: relative
      top: -3px

    #___plusone_0, .g-plusone
      margin-left: 15px !important

  .left-side
    @include span-columns(6)
    @include media($mobile)
      @include span-columns(12)

  .right-side
    @include span-columns(6)
    @include media($mobile)
      @include span-columns(12)

  p.info
    margin-top: -30px
    margin-bottom: 50px

  a.button.filled
    margin-top: 50px
    margin-bottom: 0

footer
  background-color: #323940

  p
    font-size: 14px
    color: rgba(255, 255, 255, 0.4)

  @include media($mobile3)
    padding-bottom: 48px

  @include media($mobile)
    text-align: center
    padding: 16px 0 64px

    p
      margin: 0
      line-height: 24px

  @include media($desktop)
    p
      line-height: 30px

    .left
      float: left

    .right
      float: right

.clearfix:before, .clearfix:after
    content: ' '
    display: table

.clearfix:after
    clear: both

=stitches-sprite($x: 0, $y: 0, $width: 0, $height: 0)
  background-position: $x $y
  width: $width
  height: $height

.wafeature
  background-image: url(img/wafeatures.jpg)
  background-repeat: no-repeat
  display: inline-block

  &.wafeature-1
    +stitches-sprite(0, 0, 163px, 95px)

  &.wafeature-2
    +stitches-sprite(-163px, 0, 163px, 95px)

  &.wafeature-3
    +stitches-sprite(-326px, 0, 163px, 95px)

section.legal
  &.legal-2
    padding-top: 30px
    padding-bottom: 30px

    h2
      margin: 0

  .content
    text-align: left
    max-width: 800px
    display: block
    margin: auto
    line-height: 1.4

    ol > li
      margin-top: 30px

    span.legal-title
      font-weight: normal

    .last-updated-at
      display: block
      margin-top: 50px
      margin-bottom: 20px

  h2.legal.title
    background: $brand-color
    color: white

// hide hellobar on mobile
.HB-Slider
  @include media($mobile3)
    display: none !important

